Translated whatsnew.lang and video_fx13.lang pages to Kannada
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106579 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/kn/videos/video_fx13.lang
+++ b/kn/videos/video_fx13.lang
@@ -1,42 +1,41 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[ಫೈರ್ಫಾಕ್ಸಿನಲ್ಲಿ ಹೊಸತೇನಿದೆ] ಇತ್ತೀಚಿನ ಫೈರ್ಫಾಕ್ಸಿನೊಂದಿಗೆ ನೀವು ಮಾಡಬೇಕಿಂದಿರುವ ಕೆಲಸವನ್ನು ಈಗ ಸುಲಭವಾಗಿ ಮತ್ತು ವೇಗವಾಗಿ ಮಾಡಬಹುದು.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+ಮರುವಿನ್ಯಾಸಗೊಳಿಸಲಾದ ನೆಲೆಪುಟದಿಂದ, ಸಾಮಾನ್ಯವಾಗಿ ಬಳಸಲಾಗುವ ಮೆನು ಆಯ್ಕೆಗಳಿಗೆ ನೀವು ಸುಲಭವಾಗಿ ಹೋಗಬಹುದಾಗಿರುತ್ತದೆ.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+ಇಳಿಕೆಗಳು (ಡೌನ್‌ಲೋಡ್‌ಗಳು), ಬುಕ್‌ಮಾರ್ಕುಗಳು, ಇತಿಹಾಸ, ಆಡ್-ಆನ್‌ಗಳು, ಸಿಂಕ್ ಮತ್ತು ಸಿದ್ಧತೆಗಳಂತವು.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[ಹೊಸ ಟ್ಯಾಬ್ ಪುಟ] ನಿಮ್ಮ ಹೊಸ ಟ್ಯಾಬ್‌ ಪುಟಕ್ಕೆ ನಾವು ಹೊಸ ಸುಧಾರಣೆಗಳನ್ನು ಮಾಡಿದ್ದೇವೆ.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-
+ಹೊಸ ಟ್ಯಾಬ್ ಪುಟದ ಸಹಾಯದಿಂದ ಈಗ ನೀವು ಇತ್ತೀಚಿಗೆ ಮತ್ತು ಹೆಚ್ಚು ಬಾರಿ ಭೇಟಿ ನೀಡಿದ ತಾಣಗಳಿಗೆ ಕೇವಲ ಒಂದು ಕ್ಲಿಕ್‌ನಲ್ಲಿಯೆ ತೆರಳಲು ಸಾಧ್ಯವಿರುತ್ತದೆ.
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+ಹೊಸ ಟ್ಯಾಬ್ ಪುಟವನ್ನು ಆರಂಭಿಸಲು ಬಳಸಲು, ನಿಮ್ಮ ಜಾಲವೀಕ್ಷಕದ ಮೇಲ್ಭಾಗದಲ್ಲಿನ '+' ಎನ್ನುವುದರ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ ಹೊಸ ಟ್ಯಾಬೊಂದನ್ನು ಸೃಷ್ಟಿಸಿ.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+ಹೊಸ ಟ್ಯಾಬ್ ಪುಟವು ಈಗ ನಿಮ್ಮ ಆಸಮ್ ಬಾರ್ ಇತಿಹಾಸದಿಂದ ನೀವು ಇತ್ತೀಚೆಗೆ ಮತ್ತು ಪದೇ ಪದೇ ಭೇಟಿ ನೀಡಿದ ಜಾಲತಾಣಗಳ ಅಡಕಚಿತ್ರಗಳನ್ನು ತೋರಿಸುತ್ತದೆ.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+ನಿಮ್ಮ ಹೊಸ ಟ್ಯಾಬ್ ಪುಟದಲ್ಲಿನ ಅಡಕಚಿತ್ರಗಳನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ ನಂತರ ಎಳೆದು ನಿಮಗೆ ಬೇಕೆಂದ ಕ್ರಮದಲ್ಲಿ ಇರಿಸಲು ಸಾಧ್ಯವಿರುತ್ತದೆ.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+ತಾಣವನ್ನು ಒಂದು ಜಾಗದಲ್ಲಿ ಬಂಧಿಸಲು ಒತ್ತುಪಿನ್‌ ಅನ್ನು, ಅಥವ ತೆಗೆದುಹಾಕಲು 'X' ಗುಂಡಿಯನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+ಹೊಸತಾದ ಖಾಲಿ ಟ್ಯಾಬ್ ಪುಟಕ್ಕೆ ಮರಳಲು ಪುಟದ ಮೇಲ್ಭಾಗದ ಬಲಮೂಲೆಯಲ್ಲಿರುವ 'ಚೌಕಜಾಲ' (ಗ್ರಿಡ್) ಚಿಹ್ನೆಯ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+ಇತ್ತೀಚಿನ ಫೈರ್ಫಾಕ್ಸ್ ಅನ್ನು ಈಗಲೆ ಪಡೆಯಿರಿ ಮತ್ತು ಈ ಹೊಸ ಸವಲತ್ತನ್ನು ಇಂದಿನಿಂದಲೆ ಬಳಸಲು ಪ್ರಾರಂಭಿಸಿ!
