--- a/kn/whatsnew.lang
+++ b/kn/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+ಹುರ‍್ರಾ! ನಿಮ್ಮ ಫೈರ್ಫಾಕ್ಸ್ ಅಪ್‌ಟು ಡೇಟ್ ಆಗಿದೆ.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+ನಿಮ್ಮ ಫೈರ್ಫಾಕ್ಸ್ ಹಳೆಯದಾಗಿದೆ.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+ಸುರಕ್ಷತೆಯ ಕಾರಣಗಳಿಂದಾಗಿ, <a href="{url}">ಇತ್ತೀಚಿನ ಮತ್ತು ಅತ್ಯುತ್ತಮ ಆವೃತ್ತಿ</a>ಗೆ ನವೀಕರಿಸುವಂತೆ ನಾವು ಸಲಹೆ ಮಾಡುತ್ತೇವೆ.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+ನೀವು ಫೈರ್ಫಾಕ್ಸಿನ ಗೊತ್ತಿರದ ಒಂದು ಆವೃತ್ತಿಯನ್ನು ಬಳಸುತ್ತಿರುವಿರಿ.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+ಸುರಕ್ಷತೆಯ ಕಾರಣಗಳಿಂದಾಗಿ, <a href="{url}">ಇತ್ತೀಚಿನ ಮತ್ತು ಅತ್ಯುತ್ತಮ ಆವೃತ್ತಿ</a>ಅನ್ನು ಇಳಿಸಿಕೊಳ್ಳುವಂತೆ ನಾವು ಸಲಹೆ ಮಾಡುತ್ತೇವೆ.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+ಹಿಂದೆಂದಿಗಿಂತಲೂ ವೇಗವಾಗಿ <br/>ನಿಮ್ಮ ಮುಂದಿನ ಕೆಲಸಕ್ಕೆ ತೆರಳಿ
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+ಫೈರ್ಫಾಕ್ಸಿನಲ್ಲಿನ ಹೊಸ ಸವಲತ್ತಿನಿಂದಾಗಿ ನೀವು ಹೇಗೆ ವೇಗವಾಗಿ ಮತ್ತು ಸಕ್ಷಮವಾಗಿ ಜಾಲವನ್ನು ವೀಕ್ಷಿಸಬಹುದು ಎನ್ನುವುದನ್ನು ಅರಿತುಕೊಳ್ಳಿ.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">ಹೊಸ ಟ್ಯಾಬ್‌ ಸವಲತ್ತಿನ »</a> ಇನ್ನಷ್ಟು ತಿಳಿದುಕೊಳ್ಳಿ
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+ನಮ್ಮ <a href="{url}">ಮರುವಿನ್ಯಾಸಗೊಳಿಸಲಾದ ನೆಲೆ ಪುಟದ »</a> ಕುರಿತು ಇನ್ನಷ್ಟು ತಿಳಿದುಕೊಳ್ಳಿ
 
 
 ;Keep in touch
-Keep in touch
+ಸಂಪರ್ಕದಲ್ಲಿರಿ
 
 
 ;Keep it moving
-Keep it moving
+ನಡೆಯುತ್ತಿರಲಿ
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+ಫೈರ್ಫಾಕ್ಸನ್ನು ಪಡೆದುಕೊಳ್ಳಿ » <b>ಆಂಡ್ರಾಯ್ಡಿಗಾಗಿ</b>
 
 
 ;Keep it going
-Keep it going
+ಮುಂದೆ ಸಾಗುತ್ತಲಿರಲಿ
 
 
 ;Join Mozilla
-Join Mozilla
+ಮೋಝಿಲ್ಲಾದೊಂದಿಗೆ ಸೇರಿಕೊಳ್ಳಿ
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+ಆಂಡ್ರಾಯ್ಡ್ ರೊಬೋಟ್ ಅನ್ನು <a href="%s">Googleನಿಂದ ನಿರ್ಮಿಸಲಾದ ಮತ್ತು ಹಂಚಿಕೊಳ್ಳಲಾದ</a> ಕೆಲಸದಿಂದ <a href="%s">Creative Commons 3.0 Attribution License</a>ನಲ್ಲಿ ವಿವರಿಸಲಾದ ನಿಯಮಗಳ ಅನ್ವಯ ಪುನರ್ ನಿರ್ಮಾಣಗೊಳಿಸಲಾಗಿದೆ .
 
 
