l10n: new beta snippets for all locales
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106583 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/csb/snippets.lang
+++ b/csb/snippets.lang
@@ -80,6 +80,7 @@ Firefox dlô systemù Android je terô specjalno pòdrëchtowóny dlô tabletów
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
 Zladëjë Firefoksa na Androida ë wezni sprawë sécë w swòje rãcé. <a href="%s">Zladëjë gò ju terô</a>.
 
+
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
 <a href="%">Zladëjë Firefox Beta</a>, dôj nama znac co mëslisz, ë pòmòżë zrobic Firefoksa jesz bëlniészim dlô 450 milionów bëkòwników.
 
@@ -126,3 +127,21 @@ Chùtczi, chùtczészi. <a %s>Firefox dlô Androida tëli co òstał zaktualnion
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
 Firefox ùmòżlëwiô chùtczészi przistãp do fùnkcji! <a href="%">Òbezdrzi wideò bë wëwiedzëc sã wicy.</a>
+
+
+;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+
+
+;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+
+
+;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+
+
+;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+
+
