--- a/fr/snippets.lang
+++ b/fr/snippets.lang
@@ -129,6 +129,22 @@ Rapide et surtout… rapide&nbsp;! <a %s>Firefox pour Android vient de bénéfic
 Firefox a de nouvelles fonctionnalités qui vous permettront de passer encore plus vite d'une tâche à la suivante&nbsp;! <a href="%">Pour en savoir plus, jetez un coup d'œil à la vidéo.</a>
 
 
+;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+
+
+;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+
+
+;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+
+
+;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Des grands prix&nbsp;! Des juges hollywoodiens&nbsp;! Des points d'exclamation&nbsp;! Participez à <a href="%">Firefox Flicks</a>, le concours vidéo mondial pour raconter notre histoire, ou votez pour vos vidéos préférées&nbsp;!
 
