--- a/hr/snippets.lang
+++ b/hr/snippets.lang
@@ -129,6 +129,22 @@ Brzo, brzo, brzo. <a %s>Firefox za Android je upravo dobio veliku nadogradnju</a
 Firefox ima nove mogućnosti koje će vas do vašeg idućeg zadatka dovesti brže no ikada! <a href="%">Pogledajte video da biste saznali više.</a>
 
 
+;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+
+
+;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+
+
+;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+
+
+;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Tražite tweetove, prijatelje ili popularne teme izravno iz polja za pretragu. Kliknite na ikonu pretraživača u gornjem desnom dijelu Firefoxa i odaberite Twitter.
 
