--- a/bs/snippets.lang
+++ b/bs/snippets.lang
@@ -129,6 +129,22 @@ Brz, brz, brz. <a %s>Firefox za Android je upravo dobio veliku nadogradnju</a>. 
 Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
 
 
+;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+
+
+;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+
+
+;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+
+
+;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Pretražujte Tweetove, prijatelje ili aktuelne teme direktno iz trake za pretragu. Kliknite na ikonicu za pretragu u gornjem desnom uglu Firefoxa i izaberite Twitter.
 
