--- a/de/snippets.lang
+++ b/de/snippets.lang
@@ -129,6 +129,22 @@ Schnell, schnell, schnell. <a %s>Firefox für Android hat gerade ein großes Upg
 Firefox verfügt über neue Funktionen, damit Sie sich möglichst schnell Ihrer nächsten Aufgabe widmen können! <a href="%">Erfahren Sie mehr aus diesem Video.</a>
 
 
+;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+
+
+;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+
+
+;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+
+
+;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Tolle Preise! Hollywood-Richter! Ausrufezeichen! <a href="%">Machen Sie mit bei Firefox Flicks</a>, dem weltweiten Videowettbewerb, um unsere Geschichte zu erzählen, oder stimmen Sie für Ihre Favoriten ab!
 
