--- a/ff/snippets.lang
+++ b/ff/snippets.lang
@@ -1,3 +1,6 @@
+# these text snippets are mostly used on about:home
+
+
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Nawor Firefox ɗo njahataa fof! Firefox cakkitiiɗo mo Android ena ɗoo hebii tolbec ngam weytaare maa. <a href="%s">Heɓ ɗum jooni.</a>.
 
@@ -124,3 +127,21 @@ Njaawee, njaawee, njaawee. <a %s>Firefox mo Android heɓii kesɗitinal mawngal</
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
 Firefox ena jogii fannuuji kesi ngam siynude golle maa no yaawiri! <a href="%">Ƴeew ngol lefol widewoo ngam ɓeydude humpito.</a>
+
+
+;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+
+
+;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+
+
+;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+
+
+;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+
+
