--- a/ga-IE/snippets.lang
+++ b/ga-IE/snippets.lang
@@ -129,6 +129,22 @@ Sciobtha, sciobtha, sciobtha. <a %s>Fuair Firefox ar Android nuashonrú mór</a>
 Tá gnéithe nua i bhFirefox a chabhróidh leat cromadh ar thascanna nua níos sciobtha! <a href="%">Féach ar an bhfíseán chun tuilleadh eolais a fháil.</a>
 
 
+;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+
+
+;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+
+
+;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+
+
+;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Déan cuardach ar thuíteanna, ar chairde, nó ar thopaici i mbéal an phobail ón mbarra cuardaigh. Cliceáil an deilbhín cuardaigh ag barr an bhrabhsálaí ar dheis agus roghnaigh Twitter.
 
