--- a/he/snippets.lang
+++ b/he/snippets.lang
@@ -120,11 +120,28 @@ Firefox לאנדרואיד עכשיו מותאם היטב לדרך שבה אתם
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 משתמשים ב־Firefox במספר מחשבים? מעתה תוכלו לסנכרן את התוספות שלכם בין כל המחשבים. <a href="%">מידע נוסף אודות פעולת הסנכרון.</a>
 
+
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 מהירות, מהירות, מהירות. <a %s>Firefox עבור Android זכה לשדרוג מסיבי</a>. עזרו לנו להפיץ את הבשורה.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
 Firefox כולל תכונות חדשות שיאפשרו לך לסיים את המשימה הבאה אפילו מהר יותר! <a href="%">צפו בווידאו למידע נוסף.</a>
+
+
+;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+
+
+;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+
+
+;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+
+
+;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
 
 
