--- a/lt/snippets.lang
+++ b/lt/snippets.lang
@@ -129,3 +129,19 @@ Sparti, labai sparti! <a %s>„Firefox“ naršyklė „Android“ įrenginiams 
 „Firefox“ turi naujovių, padedančių pereiti nuo vienos užduoties prie kitos dar greičiau! <a href="%">Pažiūrėkite vaizdo įrašą ir sužinokite daugiau.</a>
 
 
+;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+
+
+;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+
+
+;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+
+
+;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+
+
