Added four strings to German snippets.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106584 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/snippets.lang
+++ b/de/snippets.lang
@@ -130,19 +130,19 @@ Firefox verfügt über neue Funktionen, damit Sie sich möglichst schnell Ihrer 
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Lieben Sie Firefox Beta? <a href="%s">Laden Sie Ihre Freunde dazu ein</a>, eine Vorschau auf die nahe Zukunft von Firefox zu erhalten.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Ich verwende Firefox Beta um eine Vorschau der neuesten Funktionen und Innovationen zu erhalten, die bald in Firefox zu finden sind. <a href="%s">Sehen Sie sie sich an</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Danke, dass Sie Firefox Beta verwenden, um dabei zu helfen, dass Firefox noch wunderbarer wird. <a href="%s">Laden Sie jetzt Ihre Freunde ein</a>, sie auszuprobieren.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Ich verwende Firefox Beta, um dabei zu helfen, die neuesten Funktionen zu testen und Firefox noch wunderbarer zu machen. <a href="%s">Probieren Sie sie aus</a>.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
