Hungarian translation update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106588 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hu/snippets.lang
+++ b/hu/snippets.lang
@@ -130,18 +130,18 @@ A Firefox új funkciójával még gyorsabban lehet a következő feladatra vált
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Szereti a Firefox Beta verziót? <a href="%s">Szóljon barátainak</a>, hogy megismerhessék a Firefox hamarosan megjelenő újdonságait.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Azért használom a Firefox Beta verziót, hogy megismerjem a Firefox hamarosan megjelenő legújabb funkcióit és fejlesztéseit. <a href="%s">Nézze meg</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Köszönjük, hogy a Firefox Beta verziót használja és segít, hogy a Firefox még jobb legyen. Most <a href="%s">meghívhatja barátait is</a>, hogy próbálják ki.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Azért használom a Firefox Beta verziót, hogy kipróbálhassam a legújabb funkciókat és hogy segítsem, hogy a Firefox még jobb legyen. <a href="%s">Tegyen egy próbát</a>.
 
 
