fr, translated 4 strings in snippets.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106596 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/snippets.lang
+++ b/fr/snippets.lang
@@ -130,19 +130,19 @@ Firefox a de nouvelles fonctionnalités qui vous permettront de passer encore pl
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Vous aimez Firefox Bêta&nbsp;? <a href="%s">Dites-le à vos amis</a> pour qu'eux aussi découvrent les nouvelles fonctionnalités de Firefox en avant première.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+J'utilise Firefox Bêta pour avoir toutes les nouvelles fonctionnalités de Firefox en avant première. <a href="%s">Essaye-le</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Merci d'utiliser Firefox Bêta, et de contribuer à faire de Firefox un meilleur navigateur. Maintenant,<a href="%s">dites à vos amis</a> de l'essayer.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+En utilisant Firefox Bêta, j'aide à tester les dernières fonctionnalités de Firefox pour en faire un meilleur navigateur.<a href="%s">Essaye-le</a>.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
