23Jun12 new snippets.lang strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106617 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/csb/snippets.lang
+++ b/csb/snippets.lang
@@ -130,18 +130,18 @@ Firefox ùmòżlëwiô chùtczészi przistãp do fùnkcji! <a href="%">Òbezdrzi
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Widzy Cë sã wersjô Beta? <a href="%s">Rôczë swòjich drëchów ë znajomich</a> żebë pòznelë nônowszé fùnkcje Firefoksa.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Ùżiwóm Firefox Beta, bë wëpróbòwac nônowszich fùnkcji, chtërné wnet òstaną wprowadzoné do Firefoksa. <a href="%s">Òbôczë tuwò</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Ceszã sã, że môsz wëpróbòwóné wersjã Beta, co mama pòmòże w pòprawienim Firefoksa. Terô <a href="%s">rôczë swòjich znajomich ë drëchów</a> bë téż spróbòwelë.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Ùżiwóm Firefox Beta, bë wëpróbòwac nônowszich fùnkcji, chtërné wnet bãdą wprowadzoné do Firefoksa. <a href="%s">Kònieczno gò téż przetestùjë</a>.
 
 
