Complete translations for bug 760551
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106631 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/wo/videos/video_fx13.lang
+++ b/wo/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Yan xibaar ci Firefox] Yomb na leegi te gaaw leegi, dem foo bëgg te agg itam foo bëgg ak Firefox bu mujj bi.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Ak xëtu dalal jamm bi ñu defaraat, mën nga leegi agg ak joow ci lu yomb ci sa ay tànneefi njël yi ngay gena jariñoo.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Yi melni yeb yi, mandarga xët yi, jaar jaar, modil yi, jokkoo yi ak paraameetar yi.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Xëtu koñ bu bees] Yokk nañu itam ay bees bees ci xëtu koñ bu bees.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Ak sa xëtu koñ bu bees, mën nga joow bu yomb ci yi gëna bees ak yi ngay gëna gane ci benn cuq.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Boo bëggee tambali jëfandikoo xëtu koñ bu bees, sosal koñ bu bees boo cuqee ci '+' ci jowkat bi ci kaw.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+ Xëtu koñ bu bees dina wone leegi wiñeti dal yi nga mujj gane.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Mën nga solal sa xëtu koñ bu bees boo puusee wiñet yi ñu sãse palaas.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Cuqal ci pinees bi ngir xomb dal bi ci fi mu ne, walla butoŋ 'X' boo bëggee neenal dal.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Mën nga cuq itam ci njunju «caax» te ne ci kaw ci ndeyjooru xët wi boo bëggee dellusi ci xëtu koñ bu bees bu dara nekkul.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Amal Firefox bi mujj te tambali jëfanikoo tay bees bees yi!
