--- a/wo/whatsnew.lang
+++ b/wo/whatsnew.lang
@@ -1,63 +1,58 @@
-# This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
-
-
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Waaw! Sa Firefox yees na.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Sa firefox dafa maggat.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Ngir kaarange, ñi ngi lay digal nga yeesal ak <a href="{url}">sumb bi mujj te gëna baax</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Yaa ngiy dawal sumbu Firefox bu kenn xamul.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Ngir kaarange ñi ngi lay digal nga yeb ci <a href="{url}">sumb bi mujj te gëna baax</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Aggal ci sa liggeey biy ñëw <br/>mu gëna gaaw
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Xolal ndax bees bees yi ci Firefox ñi ngi lay dimmali nga joow bu bu gëna baax.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Gëna xam ci mbiru <a href="{url}">koñ bu bees »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Gëna xam ci <a href="{url}">suñu xëtu dalal jamm bi ñu defaraat »</a>
 
 
 ;Keep in touch
-Keep in touch
+Nañu toog ci jokkoo
 
 
 ;Keep it moving
-Keep it moving
+Keep it moving {ok}
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Jëlal Firefox » <b>ngir Android</b>
 
 
 ;Keep it going
-Keep it going
+Kontineel
 
 
 ;Join Mozilla
-Join Mozilla
+Jokkoo Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
-
+Robot Android ñi ngi ko dippee ci liggeey bu  <a href="%s">bokk ak Google</a> te ñu koy jëfanikoo ci anam yi ñu wax ci <a href="%s">Creative Commons 3.0 Attribution License</a>.
