--- a/wo/newsletter.lang
+++ b/wo/newsletter.lang
@@ -1,195 +1,190 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
-
-
 ;Get Monthly News
-Get Monthly News
+Am xibaar weer wu ne
 
 
 ;Your Email Address
-Your Email Address
+Sa makkaan email
 
 
 ;Text
-Text
+Mbind
 
 
 ;Available Languages
-Available Languages
+Lammiñ yi féex
 
 
 ;Select country
-Select country
+Tànn diiwaan
 
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+Whoops! Na la wóor ni yaa ngiy dugal makkaanu email bu baax.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
+Ñi ngi lay ñaan nga jàng Politigu biir bu Mozilla te nga xosi wërngal bi boo nangu.
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
-I agree to the <a href="%s">Privacy Policy</a>
+Nangu naa <a href="%s">Politigu biir</a>
 
 
 ;Sign me up!
-Sign me up!
+Bind ma
 
 
 ;We will only send you Mozilla-related information.
-We will only send you Mozilla-related information.
+Xibaar yi ñu lay yonnee ci Mozilla rekk la jëm
 
 
 ;Thanks for Subscribing!
-Thanks for Subscribing!
+Jërajëf ci sa takkoo
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
+Ñi ngiy beg leegi ci seddoo bi ñu nara def ci ndigal, pexe ngir gëna mën jariñoo Firefox, ak ay xibaar ci Mozilla ak nan la ñuy def ba am web bu g¨na baax.
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Takkool ak yeesal yi weer wu ne, te di am ay xibaari Mozilla, dem ba ci pexe yi lay may nga gëna mën jariñoo sa joowkat Firefox. Mooy yoon wi gën ci jokkoo.
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Yonnee nañu la ci email benn bataaxalu dëgal. Cuqal ci buumu dëgal bi ci email bi ngir dëggal sa takkoo ak mailig list bi.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Jàngal lepp ci sunu<span>xibaarukaay</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Sa takkoo ak xibaarukaay dëggal nañu ko
 
 
 ;Format
-Format
+Daytal
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Ñun ñeppa and! <span>Wante negal, Gën na bari</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Ndax bëgg nga am ay xibaar yu gëna am solo? Wax ñu tuuti ci yaw. Te li fa nekk bindal keneen ci xibaari Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox ak yaw
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Suñu yeneen xibaarukaay:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Amal pexe yi mujj gir mëna Jëfandikoo bu baax sajoowkat bi nga taamu.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox telefon
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Gëna xam ci modil yu bees yi ak Firefox telefon.
 
 
 ;Beta News
-Beta News
+Xibaari Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Jàng bees bees yi mujj ci Firefox ordinatëëru biro ak telefon laata sumb bu mujj bi.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Nañu nekk ay xarit!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox mi ngi itam ci lëkkale mboolo yi nga taamu. Jokkool ak ñun te bokk ci waxtaan wi.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Saytu say <span>bindu cixibaarukaay yi</span>
 
 
 ;Subscribe
-Subscribe
+Takkoo
 
 
 ;Unsubscribe
-Unsubscribe
+Dindi takkoo
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Xosil fii boo bëggee ñu dindi la ci email Mozilla yépp
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Dindi ma ci email Mozilla yépp
 
 
 ;Save Preferences
-Save Preferences
+Aar taamu yi
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Jërajëf ci li nga yeesal say taamu email.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Dindi nañu sa takkoo.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Metti nañu gis la ngay dem. Ndax mën nga ñu wax lu tax?
 
 
 ;You send too many emails.
-You send too many emails.
+Email yi ngay yonnee bari nañu.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Sa këmb amul solo ci man.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Sa email dafa jafe jàng.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Xaatimuma ngir lii.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Maa ngi jokkoo ak Mozilla ci Facebook ak Twitter.
 
 
 ;Submit
-Submit
+Jebbale
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Wax ñu lu tax ngay dem.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Xibaarukaay Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Jërajëf! xoolal sa boyetu mail ngir dëggal sa takkoo.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+War nga jot benn email bu jojge ci from mozilla@e.mozilla.org ngir dëggal sa takkoo. Soo ko gisul, seetal spam. Da nga war dëggal sa takkoo ngir jot sunu xibaarukaay.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
-
+Bul fatte yokk sunu makkaan: mozilla@e.mozilla.org ci sa karne makkaan, mu wóor ni saa su ne dinañu la mëna jot.
