--- a/zh-TW/snippets.lang
+++ b/zh-TW/snippets.lang
@@ -130,19 +130,19 @@ Firefox 新增了一些功能，讓您的任務可以更快完成！<a href="%">
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+愛用 Firefox Beta 嗎？<a href="%s">邀請您的朋友</a> 體驗看看 Firefox 即將到來的全新功能。
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+在正式版推出前，我使用 Firefox Beta 搶先體驗最新功能與創新。<a href="%s">立刻試用</a>。
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+感謝您使用 Firefox Beta 讓 Firefox 變得更棒。也 <a href="%s">邀請您的朋友</a> 體驗一下吧。
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+在正式版推出前，我使用 Firefox Beta 搶先體驗最新功能與創新，並且讓 Firefox 變得更棒。<a href="%s">立刻試用</a>。
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
