Add missing translations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106666 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gd/snippets.lang
+++ b/gd/snippets.lang
@@ -1,6 +1,3 @@
-# these text snippets are mostly used on about:home
-
-
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Thoir leat Firefox àite sam bith dhan dèid thu! Tha an tionndadh as ùire de Firefox airson Android deas ri do làimh a-nis. <a href="%s">Faigh e an-dràsta</a>.
 
@@ -130,18 +127,16 @@ Tha feartan ùra ann am Firefox leis an ruig thu an ath-shaothair romhad fiù na
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Gaol agad air Firefox Beta? <a href="%s">Thoir cuireadh dha do charaidean</a> ach am faic iad plathadh dhe na tha ri tighinn ann am Firefox air thoiseach air càch.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Tha mise a' cleachdadh Firefox Beta ach am faigh mi plathadh air na feartan is leasachaidhean a tha a' tighinn ann am Firefox a dh'aithghearr. <a href="%s">Feuch e</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Tapadh leat airson Firefox Beta a chleachdadh gus Firefox a dhèanamh nas fhearr fhathast. Nise, carson nach <a href="%s">doir thu cuireadh dha do charaidean</a> dha?
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-
-
+Tha mise a' cleachdadh Firefox Beta gus na feartan as ùire a chur fo dheuchainn ach am bi Firefox e fhèin nas fhearr fhathast. <a href="%s">Nach fheuch thu ris?</a>
