Locale updated + minor change
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106672 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/da/snippets.lang
+++ b/da/snippets.lang
@@ -90,7 +90,7 @@ Test funktioner, finpuds dem og hjælp os til at lave vores næste version bedre
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Elsker du Firefox? Vil du hjælpe os med at gøre den næste version endnu bedre? <a href="%">Download Firefox beta</a>, og giv os din mening i dag!
+an du lide Firefox? Vil du hjælpe os med at gøre den næste version endnu bedre? <a href="%">Download Firefox beta</a>, og giv os din mening i dag!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
@@ -126,22 +126,22 @@ Lynhurtig! <a %s>Firefox til Android har netop fået en stor opgradering</a>. Fo
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox har fået en ny funktion, der gør det hurtigere at komme videre til din næste opgave. Se hvordan i <a href="%">denne video</a>.
+Firefox har fået nye funktioner, der gør det hurtigere at komme videre til din næste opgave. Se hvordan i <a href="%">denne video</a>.
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Kan du lide Firefox Beta? <a href="%s">Invitér dine venner</a> til et prøvekig på, hvad der er på vej til Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Jeg bruger Firefox Beta til at få et prøvekig på nye funktioner og tiltag, der er på vej til Firefox. <a href="%s">Tag et prøvekig</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Tak for at du bruger Firefox Beta, og for at du dermed hjælper med at gøre Firefox endnu bedre. <a href="%s">Invitér dine venner</a> til også at prøve.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Jeg bruger Firefox Beta for at hjælpe med at teste de nyeste funktioner og for at gøre Firefox endnu bedre. <a href="%s">Prøv Firefox Beta</a>.
 
 
