--- a/is/snippets.lang
+++ b/is/snippets.lang
@@ -130,18 +130,18 @@ Firefox er með nýja hluti sem hjálpa þér að klára þín verkefni hraðar!
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Dýrkar þú Firefox Beta? <a href="%s">Bjóddu vinum þínum</a> að sjá hvað er nýtt í Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Ég nota Firefox Beta til að sjá hvað er nýtt og hvaða hugmyndir eru í gangi fyrir Firefox. <a href="%s">Kíktu á það</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Takk fyrir að nota Firefox Beta og hjálpa til við að gera Firefox betri. Bjóddu <a href="%s">vinum þínum</a> að prófa það líka.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Ég nota Firefox Beta til prófa nýjustu hlutina og gera Firefox betri. <a href="%s">Prófaðu það</a>.
 
 
