--- a/eo/snippets.lang
+++ b/eo/snippets.lang
@@ -130,18 +130,18 @@ Firefox havas novajn trajtojn por helpi vin aliri vian venontan taskon eĉ pli r
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Ĉu vi ŝatas Firefox Betan? <a href="%s">Invitu viajn geamikojn</a> malkovri tion, kio baldaŭ aperos en Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Mi uzas Firefox Betan por malkovri la lastajn trajtojn kaj novaĵojn, kiuj aperos baldaŭ en Firefox. <a href="%s">Provu ĝin</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Dankon pro la uzado de Firefox Beta, kio helpas nin igi Firefox pli mirinda. Nun <a href="%s">invitu viajn geamikojn</a> provi ĝin.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Mi uzas Firefox Betan por helpi testi la lastajn trajtojn kaj igi Firefox pli mirinda. <a href="%s">Provu ĝin</a>.
 
 
