[it] update snippets (beta)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106717 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/snippets.lang
+++ b/it/snippets.lang
@@ -130,18 +130,17 @@ Firefox introduce nuove funzioni per rendere il tuo lavoro ancora più veloce. <
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Ti piace Firefox Beta? <a href="%s">Invita i tuoi amici</a> a scoprire tutte le novità in arrivo per Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Io utilizzo Firefox Beta per scoprire le funzionalità più aggiornate e le novità in arrivo per Firefox. <a href="%s">Dai un'occhiata anche tu</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Grazie per aver scelto Firefox Beta e per aiutarci a rendere Firefox ancora più straordinario. Ora <a href="%s">invita i tuoi amici</a> a provarlo.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-
+Io utilizzo Firefox Beta per scoprire le funzionalità più aggiornate e rendere Firefox ancora più straordinario. <a href="%s">Provalo anche tu</a>.
 
