[es-ES] l10n update of snippets.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106724 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/snippets.lang
+++ b/es-ES/snippets.lang
@@ -22,7 +22,7 @@ Descubre cómo será el futuro de Firefox. <a href="%s">Descarga Firefox Aurora<
 
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
-Antes de Firefox está la Beta, y antes de la Beta está Aurora. <a href="%s">Prueba Firefox Aurora</a> ahora con las características más innovadoras.
+Antes de Firefox está Beta, y antes de Beta está Aurora. <a href="%s">Prueba Firefox Aurora</a> ahora con las características más innovadoras.
 
 
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
@@ -126,23 +126,23 @@ Rápido, rápido, rápido. <a %s>Firefox para Android acaba de ser actualizado</
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+¡Firefox tiene nuevas características para que llegues a tu siguiente tarea más rápido que nunca! <a href="%">Mira este vídeo para tener más información.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+¿Te encanta Firefox Beta? <a href="%s">Invita a tus amigos</a> a que descubran cómo será el futuro de Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Uso Firefox Beta para descubrir cómo serán las últimas características e innovaciones que se integrarán en Firefox. <a href="%s">Compruébalo</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Gracias por usar Firefox Beta y ayudarnos a que Firefox sea aún más alucinante. <a href="%s">Invita a tus amigos</a> a que lo prueben.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Uso Firefox Beta para ayudar a probar las últimas características y hacer que Firefox sea aún más alucinante. <a href="%s">Pruébalo</a>.
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
